--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - POSTGRES_DB=mydatabase
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
+      - DB_NAME=mydatabase
+      - DB_USERNAME=myuser
+      - DB_PASSWORD=mypassword
     depends_on:
       - database
 
